--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^9.16.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.461.0",
